--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h1>Compositing, blending, cropping images</h1>
         <h2>by Rimia Vas, 2023</h2>
         <p>
-            Demonstration and template for different styles of compositing, blending, cropping, and scaling of images.
+            Title : Medusa wants takeaway
         </p>
     </div>
     <script src="sketch.js"></script>
